Reset location scroll target state after scroll happens to prevent weird jumps on refresh.

--- a/src/routes/Root.css
+++ b/src/routes/Root.css
@@ -374,7 +374,7 @@ body {
 }
 
 .dev-blog-body li {
-  margin: 0 0 1em 1.5em;
+  margin: 0 0 0.75em 1.5em;
 }
 
 .dev-blog-body iframe {
